Rediseño de la solución